# tdk_sozluk

./: Cargo.toml  Readme.md
src/: lib.rs
